<resources>
    <string name="app_name">Almursheed</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_internet">No internet. Connect to wi-fi or cellular network.</string>
    <string name="retry">Retry</string>
    <string name="reconnect">Reconnect</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_mursheed">Welcome \nTo \nMursheed</string>
    <string name="get_the_best_deals_on_mursheed_app_we_are_excited_to_have_you_on_board_as_a_tourist_tour_guide_or_car_driver">Get the best deals on Mursheed App, \nWe are excited to have you on board as a \ntourist, tour guide, or car driver.</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="tourist_register">Tourist Register</string>
    <string name="tourist_name">Tourist Name</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="login_as">Login as <font fgcolor='#FF0000'> *</font></string>
    <string name="email_address">Email Address <font fgcolor='#FF0000'> *</font></string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password">Password <font fgcolor='#FF0000'> *</font></string>
    <string name="new_password">New Password <font fgcolor='#FF0000'> *</font></string>
    <string name="confirm_password">Confirm Password <font fgcolor='#FF0000'> *</font></string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verification_code">Verification Code</string>
    <string name="create_new_password">Create new password</string>
    <string name="or_login_with">OR Login With</string>
    <string name="option">Options</string>
    <string name="register">Register</string>
    <string name="select_your_option">Select an Option</string>
    <string name="select_your_nationality">Select Your Nationality</string>
    <string name="select_your_destination">Select your Destination</string>
    <string name="select_your_country">Select Your Country</string>
    <string name="select_your_city">Select Your City</string>
    <string name="select_language">Select Language</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="select_car_brand_name">Select Car Brand Name</string>
    <string name="select_car_manufacturing_date">Select Car Manufacturing Date</string>
    <string name="full_name">Full Name <font fgcolor='#FF0000'> *</font></string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="nationality">Nationality <font fgcolor='#FF0000'> *</font></string>
    <string name="country">Country <font fgcolor='#FF0000'> *</font></string>
    <string name="city">City <font fgcolor='#FF0000'> *</font></string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="personal_picture">Personal Picture</string>
    <string name="upload_your_picture">Upload Your Picture</string>
    <string name="guide_register">Guide Register #1</string>
    <string name="guide_register_second">Guide Register #2</string>
    <string name="driver_register">Driver Register #1</string>
    <string name="driver_register_second">Driver Register #2</string>
    <string name="let_s_get_started">Let’s get started</string>
    <string name="choose_register_type_and_register_in_mursheed">Choose register type and register \nin Mursheed</string>
    <string name="already_have_an_account_login">Already have an account? <b><font fgcolor='#088070'>Login</font> </b></string>
    <string name="didn_t_get_the_code_resend_code">Didn’t get the code? <b><font fgcolor='#088070'>Resend Code</font> </b></string>
    <string name="phone_number">Phone Number <font fgcolor='#FF0000'> *</font></string>
    <string name="enter_your_id">Enter Your ID</string>
    <string name="government_id">Government ID <font fgcolor='#FF0000'> *</font></string>
    <string name="language">Language <font fgcolor='#FF0000'> *</font></string>
    <string name="language_text">Language</string>
    <string name="biography">Biography <font fgcolor='#FF0000'> *</font></string>
    <string name="enter_your_biography">Enter Your Biography</string>
    <string name="choose_destination">Choose Destination <font fgcolor='#FF0000'> *</font></string>
    <string name="choose_city">Choose City</string>
    <string name="license_number">License Number <font fgcolor='#FF0000'> *</font></string>
    <string name="enter_your_license_number">Enter Your License Number</string>
    <string name="car_type">Car Type <font fgcolor='#FF0000'> *</font></string>
    <string name="car_brand_name">Car Brand Name <font fgcolor='#FF0000'> *</font></string>
    <string name="car_number">Car Number <font fgcolor='#FF0000'> *</font></string>
    <string name="enter_car_number">Enter Car Number</string>
    <string name="car_manufacturing_date">Car Manufacturing Date <font fgcolor='#FF0000'> *</font></string>
    <string name="car_photo">Car Photo <font fgcolor='#FF0000'> *</font></string>
    <string name="upload_document">Upload Document <font fgcolor='#FF0000'> *</font></string>
    <string name="select_multi_photos">Select Multi-Photos</string>
    <string name="please_enter_your_email_address_to_receive_a_verification_code">Please enter your email address to \nreceive a verification code</string>
    <string name="send">Send</string>
    <string-array name="options">
        <item>Driver</item>
        <item>Guide</item>
        <item>Tourist</item>
    </string-array>
    <string-array name="car_categories">
        <item>SUV</item>
        <item>Sport</item>
        <item>Family</item>
        <item>Economic</item>
        <item>Sedan</item>
        <item>Hatshbag</item>
        <item>Bus</item>
    </string-array>
    <string-array name="accommodation_categories">
        <item>Apartments</item>
        <item>Cottages</item>
        <item>Hotels</item>
        <item>Vila</item>
    </string-array>
    <string-array name="numbers_of_rooms">
        <item>One Room</item>
        <item>Two Rooms</item>
        <item>3 Rooms</item>
        <item>+5 Rooms</item>
    </string-array>
    <string-array name="car_years">
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>
    <string name="search_murcheed_app">Search Murcheed App</string>
    <string name="best_drivers">Best Drivers</string>
    <string name="see_all">See all</string>
    <string name="book_now">Book Now</string>
    <string name="best_guides">Best Guides</string>
    <string name="guides">Guides</string>
    <string name="offers">Offers</string>
    <string name="popular_locations">Popular Locations</string>
    <string name="home">Home</string>
    <string name="hire">Hire</string>
    <string name="receipt">Receipt</string>
    <string name="accommodation">Accommodation</string>
    <string name="accommodation_details">Accommodation Details</string>
    <string name="driver_details">Driver Details</string>
    <string name="guide_details">Guide Details</string>
    <string name="location_details">Location Details</string>
    <string name="locations">Locations</string>
    <string name="flight_reservation">Flight reservation</string>
    <string name="flight">Flight</string>
    <string name="more">More</string>
    <string name="our_drivers">Our Drivers</string>
    <string name="price">Price</string>
    <string name="location_info">Location Info</string>
    <string name="location_address">Location Address</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="available">Available</string>
    <string name="accommodation_info">Accommodation Info</string>
    <string name="boat_tour">Boat tour</string>
    <string name="price_offer">Price:</string>
    <string name="_2000"><strike>2000 $</strike></string>
    <string name="car_info">Car Info</string>
    <string name="register_as_a_tourist">Register as a Tourist</string>
    <string name="register_as_a_guide">Register as a Guide</string>
    <string name="register_as_a_driver">Register as a Driver</string>
    <string name="owner_info">Owner info</string>
    <string name="required">Field is required</string>
    <string name="password_should_be_more_than_8_characters">Password should be more than 8 characters</string>
    <string name="confirm_password_should_be_more_than_8_characters">Confirm password should be more than 8 characters</string>
    <string name="a_verification_code_has_been_sent_to">A verification code has been sent to</string>
    <string name="enter_the_code_below">enter the code below</string>
    <string name="resend_code_in">Resend code in %s</string>
    <string name="verify">Verify</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="your_new_password_must_be_different_nfrom_previous_used_passwords">Your new password must be different \nfrom previous used passwords</string>
    <string name="create">Create</string>
    <string name="live_chat">Live Chat</string>
    <string name="about_murcheed">About Murcheed</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="notifictions">Notifictions</string>
    <string name="order_details">Order Details</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_location">Edit Location</string>
    <string name="update">Update</string>
    <string name="trip_info">Trip info</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="route_info">Route info</string>
    <string name="where_to">Where to?</string>
    <string name="where_from">Where from?</string>
    <string name="what_do_you_want_hire">What do you want hire?</string>
    <string name="destination_country">Destination Country <font fgcolor='#FF0000'> *</font></string>
    <string name="destination_city">Destination City <font fgcolor='#FF0000'> *</font></string>
    <string name="submit">Submit</string>
    <string name="destination">Destination</string>
    <string name="in_city">In City</string>
    <string name="between_cities">Between Cities</string>
    <string name="driver">Driver</string>
    <string name="guide">Guide\n</string>
    <string name="drivers">Drivers</string>
    <string name="earring">Earning</string>
    <string name="my_prices">My Prices</string>
</resources>