<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/action_hireFragment"
        android:icon="@drawable/ic_hire"
        android:title="@string/hire"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/action_accommodationFragment"
        android:icon="@drawable/ic_accommodation"
        android:title="@string/accommodation"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/action_flightReservation"
        android:icon="@drawable/ic_flight"
        android:title="@string/flight_reservation"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

</menu>