<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home_driver_guide"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/action_priceFragment"
        android:icon="@drawable/ic_price_tag"
        android:title="@string/price"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/action_earningFragment"
        android:icon="@drawable/ic_earning"
        android:title="@string/earring"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />


    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="@string/more"
        app:cnb_backgroundColor="@color/primary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

</menu>